infrastructure/modules/istio/gateway-cuddly-disco-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cuddly-disco-gateway
  namespace: istio-system
  annotations:
    networking.istio.io/service-type: NodePort
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: cuddly-disco.ai.localhost
    allowedRoutes:
      namespaces:
        from: All
